tentative de résolution des blocks

--- a/views/pug/index.pug
+++ b/views/pug/index.pug
@@ -15,7 +15,7 @@ html
   body
 
         section#home.home
-            .intro_me.col-lg-3.col-lg-offset-4-5
+            .intro_me //.col-lg-3.col-lg-offset-4
                 h1.col-lg-12.text-center Ronald</br>Marcel
                 h3.col-lg-12.text-center Product Designer </br> Developper Front-End
                 p.intro.col-lg-12.text-center Hello! My name is Pierre Nel, and I'm a London-based freelancer. If I'm not freelancing at some of London's finest digital agencies, I'm working remotely on projects for clients all over the world.<br>I have a diverse set of skills, ranging from design, to HTML + CSS + Javascript, all the way to PHP, custom Drupal module development and Linux server administration.
@@ -38,51 +38,63 @@ html
                 .button#coder.text-capitalize coder
                 .button#designer.text-capitalize designer
         section#development.closed
-            .row
-                .navlist
-                    .ul
-                        .li.all
-                        .li.website
-                        .li.app
+            .container-fluid
+                .navlist.col-lg-2.col-lg-offset-10
+                    ul.nav.nav-pills
+                        li all
+                        li website
+                        li app
                 .gallery.col-lg-10.col-lg-offset-1
-                    .box.col-lg-3
-                        .title_project
-                            h4
-                        .details
-                            p {html} {css3} {js}
-                    .box.col-lg-3
-                        .title_project
-                            h4
-                        .details
-                            p {html} {css3} {js}
-                    .box.col-lg-3
-                        .title_project
-                            h4
-                        .details
-                            p {html} {css3} {js}
-                    .box.col-lg-3
-                        .title_project
-                            h4
-                        .details
-                            p {html} {css3} {js}
-                    .box
-                        .title_project
-                            h4
-                        .details
-                            p {html} {css3} {js}
-                    .box
-                        .title_project
-                            h4
-                        .details
-                            p {html} {css3} {js}
-                    .box
-                        .title_project
-                            h4
-                        .details
-                            p {html} {css3} {js}
-                    .box
-                        .title_project
-                            h4
-                        .details
-                            p {html} {css3} {js}
+                    .block.col-lg-3
+                        .box.box_large.col-lg-12.text-center
+                            .caption
+                                .title_project.col-lg-12
+                                    h4 Projet 1
+                                .details.col-lg-12
+                                    p {html} {css3} {js}
+                        .box.box_small.col-lg-12.text-center
+                            .caption
+                                .title_project.col-lg-12
+                                    h4 Projet 1
+                                .details.col-lg-12
+                                    p {html} {css3} {js}
+                    .block.col-lg-3
+                        .box.box_small.col-lg-12.text-center
+                            .caption
+                                .title_project.col-lg-12
+                                    h4 Projet 1
+                                .details.col-lg-12
+                                    p {html} {css3} {js}
+                        .box.box_large.col-lg-12.text-center
+                            .caption
+                                .title_project.col-lg-12
+                                    h4 Projet
+                                .details.col-lg-12
+                                    p {html} {css3} {js}
+                    .block.col-lg-3
+                        .box.box_large.col-lg-12.text-center
+                            .caption
+                                .title_project.col-lg-12
+                                    h4 Projet 1
+                                .details.col-lg-12
+                                    p {html} {css3} {js}
+                        .box.box_small.col-lg-12.text-center
+                            .caption
+                                .title_project.col-lg-12
+                                    h4 Projet 1
+                                .details.col-lg-12
+                                    p {html} {css3} {js}
+                    .block.col-lg-3
+                        .box.box_small.col-lg-12.text-center
+                            .caption
+                                .title_project.col-lg-12
+                                    h4 Projet 1
+                                .details.col-lg-12
+                                    p {html} {css3} {js}
+                        .box.box_large.col-lg-12.text-center
+                            .caption
+                                .title_project.col-lg-12
+                                    h4 Projet 1
+                                .details.col-lg-12
+                                    p {html} {css3} {js}
         section#design
