Test isolé du block image effect on load

--- a/views/pug/index.pug
+++ b/views/pug/index.pug
@@ -48,6 +48,8 @@ html
                     .block.col-lg-3
                         .box.box_large.col-lg-12.text-center
                             .caption
+                                .box_img
+                                    img(src='ressources/img/13.jpg')
                                 .title_project.col-lg-12
                                     h4 Projet 1
                                 .details.col-lg-12
